<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins"
                android:textColor="#000000"
                android:textFontWeight="700"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/poppins"
                android:text="@string/title_basic_information"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/imageFilterView"
                    android:layout_width="125dp"
                    android:layout_height="112dp"
                    app:srcCompat="@drawable/usuario" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="@string/name"
                            android:textColor="#000000"
                            android:textFontWeight="600" />

                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="match_parent"
                            android:layout_height="22dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="0dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:scrollHorizontally="true"
                            android:textColor="#6A6A6A" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="@string/age"
                            android:textColor="#000000"
                            android:textFontWeight="600" />

                        <TextView
                            android:id="@+id/tvAge"
                            android:layout_width="match_parent"
                            android:layout_height="22dp"
                            android:layout_marginStart="8dp"
                            android:textColor="#6A6A6A" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="@string/account_number"
                            android:textColor="#000000"
                            android:textFontWeight="600" />

                        <TextView
                            android:id="@+id/tvAccountNumber"
                            android:layout_width="match_parent"
                            android:layout_height="22dp"
                            android:layout_marginStart="8dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:scrollHorizontally="true"
                            android:textColor="#6A6A6A" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="@string/email"
                            android:textColor="#000000"
                            android:textFontWeight="600" />

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="match_parent"
                            android:layout_height="22dp"
                            android:layout_marginStart="8dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:scrollHorizontally="true"
                            android:textColor="#6A6A6A" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/poppins"
                android:text="@string/title_chinese_horoscope"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/animal"
                    android:textColor="#000000"
                    android:textFontWeight="600" />

                <TextView
                    android:id="@+id/tvAnimal"
                    android:layout_width="58dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="8dp"
                    android:textColor="#6A6A6A" />
            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <ImageView
                android:id="@+id/ivAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>